--- a/info.html
+++ b/info.html
@@ -10,9 +10,10 @@
 
 <body>
     <header>
-        <a href="/info.html">Tạo thông tin</a>
-        <a href="/episode-list.html">Tạo danh sách tập</a>
-        <a href="/tutorial.html">Hướng dẫn</a>
+        <a href="/hembl-studio">Trang chủ</a>
+        <a href="/hembl-studio/info.html">Tạo thông tin</a>
+        <a href="/hembl-studio/episode-list.html">Tạo danh sách tập</a>
+        <a href="/hembl-studio/tutorial.html">Hướng dẫn</a>
     </header>
     <div class="container">
         <h2>Tạo mã HTML - Thông tin</h2>
