--- a/tutorial.html
+++ b/tutorial.html
@@ -17,6 +17,10 @@
     </header>
     <div class="container">
         <h2>Hướng dẫn</h2>
-        
+        <video controls style="width: 100%; height: auto;">
+          <source src="tutorial.mp4" type="video/mp4">
+          Trình duyệt của bạn không hỗ trợ thẻ video.
+        </video>
+
     </div>
 </body>
